applist: Fix DCHECK if toggle overview while home launcher still animating.

Test: Added test which failed before this change
Bug: 922129
Change-Id: I350ad4f5cc375eb512ffb9c3c040716f2445c41c
Reviewed-on: https://chromium-review.googlesource.com/c/1412936
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622987}
Former-commit-id: abc5cc5f3e3da3f0126fea719130141209a1c796